--- a/html/index.html
+++ b/html/index.html
@@ -60,10 +60,10 @@
 						<div class="col-md-6">
 							<img src="../images/rs_st_meta.png" class="header__content__image">
 							<div class="header__content__lg_title">
-								Using research to reframe transparency positioning.
+								Does Transparency  Drive Market Activity?
 							</div>
 							<div class="header__content___md_title">
-								Well, that's the trick, isn't it? And it's going to cost you something extra. Ten thousand in advance. Ten thousand? We could almost buy our own ship for that! But who's going to fly it, kid! You? You bet I
+								Industry Index engaged in a quantitative and qualitative research study on behalf of Metamarkets. Our aim? Define how openness and transparency bring the greatest possible value and liquidity to the programmatic advertising market.
 							</div>
 							<button type="button" class="header__content__button">DOWNLOAD THE STUDY</button>
 						</div>
@@ -74,127 +74,244 @@
 				</div>
 			</div>
 
-			<div class="discover_box">
-				<div class="discover_box__content">
+			<div class="metamarket_box">
+				<div class="metamarket_box__content">
+					<div class="metamarket_box__lg_title">
+						Metamarkets developed an integrated content strategy designed to increase both brand awareness and prospect engagement through thought leadership.
+					</div>
+					<div class="metamarket_box__md_title">
+						To deliver on this strategy, they asked Industry Index to conduct in-market research to ground the concept of “transparency” in the programatic ecosystem, and define a standard of transparency measurement which brands, agencies, and publishers could all agree upon.
+					</div>
+					<div class="metamarket_box__services">
+						<div class="row">
+							<div class="col-sm-6">
+								<div class="metamarket_box__xs_title">
+									Research Services
+								</div>
+
+								<div class="metamarket_box__sm_title">
+									Research Hypothesis Development
+								</div>
+								<div class="metamarket_box__sm_title">
+									Quantitative & Qualitative Survey Development
+								</div>
+								<div class="metamarket_box__sm_title">
+									Data Collection, Analysis & Interpretation
+								</div>
+								<div class="metamarket_box__sm_title">
+									White Paper: Narrative Outline
+								</div>
+								<div class="metamarket_box__sm_title">
+									White Paper: Writing
+								</div>
+							</div>
+							<div class="col-sm-6">
+								<div class="metamarket_box__xs_title">
+									Output
+								</div>
+								<div class="metamarket_box__sm_title">
+									Survey Data & Interpretation
+								</div>
+								<div class="metamarket_box__sm_title">
+									Design-Ready White Paper Content Writing
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="trans_opportunity_box">
+				<img src="../images/img_trans_opp.png"/>
+			</div>
+
+			<div class="participate_box">
+				<div class="participate_box__content">
+					<div class="participate_box__desc">
+						Our research work began from a simple hypothesis: Does deeper transparency will help grow the programmatic market? What is required structurally and from a data flow perspective to provide radical transparency?  
+						<br><br>
+						Based on this framework, we designed conducted a quantitative survey with a subsection of our panel of engaged users, split evenly between senior brand and agency marketers, and publishers. This survey was designed to yield data based on several key questions, including:
+					</div>
+
+					<div class="participate_box__ques">
+						<div class="participate_box__sm_title">
+							What defines transparency and how does this differ by screen/channel?<br><br>
+							How much would buyers increase budgets if they had access to transparent data?<br><br>
+							What are the key perceived obstacles and corresponding frustrations of switching to transparent suppliers?
+						</div>
+					</div>
+
+					<div class="participate_box__infographics">
+						<div class="participate_box__infographics-top">
+							<div class="row">
+								<div class="col-md-4">
+									<div class="participate_box__infographics__img1">
+										<img src="../images/img_infograph1.svg"/>
+									</div>
+									<div class="participate_box__infographics__lg_title">
+										171 Senior Industry Professionals <br>Participated in Research
+									</div>
+									<div class="participate_box__infographics__md_title">
+										54 Publishers, 57 Sr. Brand Marketers,<br>
+										60 Sr. Agency Marketers
+									</div>
+								</div>
+								<div class="col-md-4">
+									<div class="participate_box__percent">
+										100%
+									</div>
+									<div class="participate_box__infographics__lg_title">
+										Participated in<br>
+										Quantitative Research
+									</div>
+								</div>
+								<div class="col-md-4">
+									<div class="participate_box__infographics__img2">
+										<img src="../images/img_infograph2.svg"/>
+									</div>
+									<div class="participate_box__infographics__lg_title">
+										Sample of Respondents also took part in <br>Qualitative Interviews for additional<br> insight/color
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="participate_box__infographics-bottom">
+							<div class="participate_box__infographics-bottom__lg_title">
+								Industries Represented
+							</div>
+							<div class="row">
+								<div class="col-sm-2">
+									<img src="../images/icon_industry01.png"/>
+									<div class="participate_box__infographics-bottom__md_title">
+										Travel & Leisure
+									</div>
+								</div>
+								<div class="col-sm-2">
+									<img src="../images/icon_industry02.png"/>
+									<div class="participate_box__infographics-bottom__md_title">
+										Retail
+									</div>
+								</div>
+								<div class="col-sm-2">
+									<img src="../images/icon_industry03.png"/>
+									<div class="participate_box__infographics-bottom__md_title">
+										Healthcare
+									</div>
+								</div>
+								<div class="col-sm-2">
+									<img src="../images/icon_industry04.png"/>
+									<div class="participate_box__infographics-bottom__md_title">
+										CPG
+									</div>
+								</div>
+								<div class="col-sm-2">
+									<img src="../images/icon_industry05.png"/>
+									<div class="participate_box__infographics-bottom__md_title">
+										Auto
+									</div>
+								</div>
+								<div class="col-sm-2">
+									<img src="../images/icon_industry06.png"/>
+									<div class="participate_box__infographics-bottom__md_title">
+										Energy & Utilities
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-sm-2">
+									<img src="../images/icon_industry07.png"/>
+									<div class="participate_box__infographics-bottom__md_title">
+										Insurance
+									</div>
+								</div>
+								<div class="col-sm-2">
+									<img src="../images/icon_industry08.png"/>
+									<div class="participate_box__infographics-bottom__md_title">
+										Technology
+									</div>
+								</div>
+								<div class="col-sm-2">
+									<img src="../images/icon_industry09.png"/>
+									<div class="participate_box__infographics-bottom__md_title">
+										Entertainment
+									</div>
+								</div>
+								<div class="col-sm-2">
+									<img src="../images/icon_industry10.png"/>
+									<div class="participate_box__infographics-bottom__md_title">
+										Telecom
+									</div>
+								</div>
+								<div class="col-sm-2">
+									<img src="../images/icon_industry11.png"/>
+									<div class="participate_box__infographics-bottom__md_title">
+										Finance
+									</div>
+								</div>
+								<div class="col-sm-2">
+									<img src="../images/icon_industry12.png"/>
+									<div class="participate_box__infographics-bottom__md_title">
+										QSR
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="participate_box__keytake">
+						Key takeaways from our research include:
+					</div>
+
+					<div class="participate_box__ques">
+						<div class="participate_box__sm_title">
+							New levels of transparency, agreed standards and more open data will yield understanding that will comfort brand marketers, encourage media buyers, reward the best publishers, and bring new control and flexibility to both buyers and sellers.<br><br>
+
+							Transparency will encourage increased, less-restrained sharing of data and metrics beyond the limited views seen today.<br><br>
+
+							When there is little to be gained from hiding key data, more will be revealed. Media buyers will be able to prove ROI, supporting increased digital spend and improving their ability to optimize campaigns.<br><br>
+
+							With the right investments in interactive analytics, marketers can more take control of their programmatic data and establish the data transparency that their partners at brands, agencies and publishers demand.<br><br>
+
+							Three quarters of market participants say they are concerned about the lack of transparency in programmatic advertising markets, our survey found.<br><br>
+
+							Our survey found that 89 percent in our survey, distrust a significant portion of the data upon which they’re buying and selling media.<br><br>
+
+							Three quarters of the participants in our survey say that with new transparency in the market, they would increase their spend in programmatic advertising from at least 11 percent and in some cases by 50 percent or more.
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="metafound_box">
+				<div class="metafound_box__content">
+					<img src="../images/img_metamarket.png"/>
 					<div class="row">
-						<div class="col-md-3">
-							<div class="discover_box__content__md_title">
-								<b>Research Services</b><br>
-								Custom Thought Leadership Survey,
-								Analysis Report Writing<br><br>
-
-								<b>Output</b><br>
-								White Paper
+						<div class="col-md-6">
+							<div class="metafound_box__md_title">
+								Metamarkets found our research process, yields, and deliverables to be invaluable in going to market. The resulting White Paper, “The Transparency Opportunity,” served as a cornerstone of their marketing efforts throughout 2017.
 							</div>
 						</div>
-						<div class="col-md-9">
-							<div class="discover_box__content__lg_title">
-								Discover how openness and transparency will bring the greatest possible value and liquidity in the programmatic advertising market. In this proprietary new study for MetaMarkets, brand marketers, agencies, and the publishers who work with them call for measures to bring a deeper level of visibility.
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="placeholder">
-
-			</div>
-
-			<div class="hitting_block">
-				<div class="hitting_block__content">
-					<div class="hitting_block__content__sm_title">
-						Hitting the mark
-					</div>
-					<div class="hitting_block__content__md_title">
-						Discover how openness and transparency will bring the greatest possible value and liquidity in the programmatic advertising market. In this proprietary new study for MetaMarkets, brand marketers, agencies, and the publishers who work with them call for measures to bring a deeper level of visibility. Key Takeaways include: How transparency Drives Market Activity, Defining programmatic parameters
-						How transparency Drives Market Activity
-					</div>
-				</div>
-			</div>
-
-			<div class="demo_block">
-				<div class="demo_block__content">
-					<div class="demo_block__content__sm_title">
-						Panel & Respondent Demos
-					</div>
-					<div class="row">
-						<div class="col-md-4">
-							<div class="demo_block__content__panelbox">
-								<img src="../images/rs_st_brand1.png">
-								<div class="demo_block__content__md_title">
-									<b>Señior Brand Marketers</b><br>
-									are likely to respond to research-based thought leadership
+						<div class="col-md-6">
+							<div class="metafound_box-right">
+								<div class="metafound_box__sm_title">
+									“Publishing a research-based study with Industry Index made a real impact on our overall content strategy…”
 								</div>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="demo_block__content__panelbox">
-								<img src="../images/rs_st_brand2.png">
-								<div class="demo_block__content__md_title">
-									<b>Señior Brand Marketers</b><br>
-									are likely to respond to research-based thought leadership
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="demo_block__content__panelbox">
-								<img src="../images/rs_st_brand3.png">
-								<div class="demo_block__content__md_title">
-									<b>Señior Brand Marketers</b><br>
-									are likely to respond to research-based thought leadership
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-4">
-							<div class="demo_block__content__panelbox">
-								<img src="../images/rs_st_brand1.png">
-								<div class="demo_block__content__md_title">
-									<b>Señior Brand Marketers</b><br>
-									are likely to respond to research-based thought leadership
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="demo_block__content__panelbox">
-								<img src="../images/rs_st_brand2.png">
-								<div class="demo_block__content__md_title">
-									<b>Señior Brand Marketers</b><br>
-									are likely to respond to research-based thought leadership
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="demo_block__content__panelbox">
-								<img src="../images/rs_st_brand3.png">
-								<div class="demo_block__content__md_title">
-									<b>Señior Brand Marketers</b><br>
-									are likely to respond to research-based thought leadership
+								<div class="avatar_user">
+									<img src="../images/img_avatar.png"/>
+									<div class="avatar_user__details">
+										<div class="avatar_user__details__lg_title">
+											Devan Fearman
+										</div>
+										<div class="avatar_user__details__sm_title">
+											VP Marketing of MetaMarkets
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-
-			<div class="trans_block">
-				<div class="trans_block__content">
-					<div class="trans_block__content__sm_title">
-						Success
-					</div>
-					<div class="trans_block__content__md_title">
-						Discover how openness and transparency will bring the greatest possible value and liquidity in the programmatic advertising market. In this proprietary new study for MetaMarkets, brand marketers, agencies, and the publishers who work with them call for measures to bring a deeper level of visibility.
-					</div>
-					<div class="trans_block__content__exchanger_block">
-						<div>
-							“Content creation was the No. 1 factor contributing to the success of B2B marketers… driving a strategy with data allows companies to take advantage of real-time engagement opportunities and capitalize on breaking trends.”
-						</div>
-						<span>- Ad Exchanger</span>
-					</div>
-				</div>
-			</div>
-
 
 			<div class="block_learn">
 				<div class="row">
