--- a/html/index.html
+++ b/html/index.html
@@ -122,7 +122,7 @@
 			</div>
 
 			<div class="trans_opportunity_box">
-				<img src="../images/img_trans_opp.png"/>
+				<img src="../images/img_trans_opp.png" class="trans_opportunity_box__image"/>
 			</div>
 
 			<div class="participate_box">
