--- a/html/index.html
+++ b/html/index.html
@@ -86,9 +86,8 @@
 						<div class="row">
 							<div class="col-sm-6">
 								<div class="metamarket_box__xs_title">
-									Research Services
+									Market Perception Study
 								</div>
-
 								<div class="metamarket_box__sm_title">
 									Research Hypothesis Development
 								</div>
@@ -96,24 +95,21 @@
 									Quantitative & Qualitative Survey Development
 								</div>
 								<div class="metamarket_box__sm_title">
-									Data Collection, Analysis & Interpretation
-								</div>
-								<div class="metamarket_box__sm_title">
-									White Paper: Narrative Outline
-								</div>
-								<div class="metamarket_box__sm_title">
-									White Paper: Writing
+									Data Collection
 								</div>
 							</div>
 							<div class="col-sm-6">
 								<div class="metamarket_box__xs_title">
-									Output
+									Deliverables
 								</div>
 								<div class="metamarket_box__sm_title">
-									Survey Data & Interpretation
+									Raw Data
 								</div>
 								<div class="metamarket_box__sm_title">
-									Design-Ready White Paper Content Writing
+									Survey Analysis & Interpretation
+								</div>
+								<div class="metamarket_box__sm_title">
+									Design-Ready White Paper
 								</div>
 							</div>
 						</div>
@@ -294,7 +290,7 @@
 						<div class="col-md-6">
 							<div class="metafound_box-right">
 								<div class="metafound_box__sm_title">
-									“Publishing a research-based study with Industry Index made a real impact on our overall content strategy…”
+									“Publishing our research-based study with a trusted partner like Industry Index greatly enhanced its value and made a real impact on our overall content strategy.”
 								</div>
 								<div class="avatar_user">
 									<img src="../images/img_avatar.png"/>
@@ -314,13 +310,8 @@
 			</div>
 
 			<div class="block_learn">
-				<div class="row">
-					<div class="col-md-6 block_learn__left">
-						<button type="button" class="block_learn__button block_learn__button-green">DOWNLOAD THE STUDY</button>
-					</div>
-					<div class="col-md-6 block_learn__right">
-						<button type="button" class="block_learn__button">READ NEXT CASE STUDY</button>
-					</div>
+				<div class="block_learn__left">
+					<button type="button" class="block_learn__button block_learn__button-green">DOWNLOAD THE STUDY</button>
 				</div>
 			</div>
 
